# api/handler/group.go
@@ -10,6 +10,16 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// @Summary Create a new group
+// @Description This endpoint is used to create a new group in the system.
+// @Tags groups
+// @Accept  json
+// @Produce  json
+// @Param data body group.CreateGroupReq true "Group creation request"
+// @Success 200 {object} group.CreateGroupResp "Successful group creation"
+// @Failure 400 {object} model.Error "Bad request: invalid input data"
+// @Failure 500 {object} model.Error "Internal server error"
+// @Router /groups/create [post]
 func(h *Handler) CreateGroup(c *gin.Context){
 	req := pb.CreateGroupReq{}
 	err := c.ShouldBindJSON(&req)
@@ -31,6 +41,16 @@ func(h *Handler) CreateGroup(c *gin.Context){
 	c.JSON(http.StatusOK, resp)
 }
 
+// @Summary Update an existing group
+// @Description This endpoint is used to update the details of an existing group.
+// @Tags groups
+// @Accept  json
+// @Produce  json
+// @Param data body group.UpdateGroupReq true "Group update request"
+// @Success 200 {object} group.UpdateGroupResp "Successful group update"
+// @Failure 400 {object} model.Error "Bad request: invalid input data"
+// @Failure 500 {object} model.Error "Internal server error"
+// @Router /groups/update [put]
 func(h *Handler) UpdateGroup(c *gin.Context){
 	req := pb.UpdateGroupReq{}
 	err := c.ShouldBindJSON(&req)
@@ -52,6 +72,16 @@ func(h *Handler) UpdateGroup(c *gin.Context){
 	c.JSON(http.StatusOK, resp)
 }
 
+// @Summary Delete a group
+// @Description This endpoint is used to delete a group from the system.
+// @Tags groups
+// @Accept  json
+// @Produce  json
+// @Param data body group.GroupId true "Group deletion request"
+// @Success 200 {object} group.DeleteResp "Successful group deletion"
+// @Failure 400 {object} model.Error "Bad request: invalid input data"
+// @Failure 500 {object} model.Error "Internal server error"
+// @Router /groups/delete [delete]
 func(h *Handler) DeleteGroup(c *gin.Context){
 	req := pb.GroupId{}
 	err := c.ShouldBindJSON(&req)
@@ -73,6 +103,16 @@ func(h *Handler) DeleteGroup(c *gin.Context){
 	c.JSON(http.StatusOK, resp)
 }
 
+// @Summary Get group by ID
+// @Description This endpoint retrieves the details of a group by its ID.
+// @Tags groups
+// @Accept  json
+// @Produce  json
+// @Param data body group.GroupId true "Group ID request"
+// @Success 200 {object} group.Group "Successful group retrieval"
+// @Failure 400 {object} model.Error "Bad request: invalid input data"
+// @Failure 500 {object} model.Error "Internal server error"
+// @Router /groups/getById [get]
 func(h *Handler) GetGroupById(c *gin.Context){
 	req := pb.GroupId{}
 	err := c.ShouldBindJSON(&req)
@@ -94,6 +134,19 @@ func(h *Handler) GetGroupById(c *gin.Context){
 	c.JSON(http.StatusOK, resp)
 }
 
+// @Summary Get all groups
+// @Description This endpoint retrieves all groups with optional filters like room and subject.
+// @Tags groups
+// @Accept  json
+// @Produce  json
+// @Param room query string false "Room filter"
+// @Param subject_id query string false "Subject ID filter"
+// @Param limit query string false "Limit for pagination"
+// @Param offset query string false "Offset for pagination"
+// @Success 200 {object} group.GetAllGroupsResp "Successful group retrieval"
+// @Failure 400 {object} model.Error "Bad request: invalid input data"
+// @Failure 500 {object} model.Error "Internal server error"
+// @Router /groups/getAll [get]
 func(h *Handler) GetAllGroups(c *gin.Context){
 	req := &pb.AllGroupsFilter{}
 	err := c.ShouldBindJSON(&req)
@@ -132,6 +185,16 @@ func(h *Handler) GetAllGroups(c *gin.Context){
 	c.JSON(http.StatusOK, resp)
 }
 
+// @Summary Add student to group
+// @Description This endpoint allows adding a student to a specific group.
+// @Tags groups
+// @Accept  json
+// @Produce  json
+// @Param data body group.AddStudentReq true "Student addition request"
+// @Success 200 {object} group.AddStudentResp "Successful student addition"
+// @Failure 400 {object} model.Error "Bad request: invalid input data"
+// @Failure 500 {object} model.Error "Internal server error"
+// @Router /groups/add-student [post]
 func(h *Handler) AddStudentToGroup(c *gin.Context){
 	req := pb.AddStudentReq{}
 	err := c.ShouldBindJSON(&req)
@@ -154,6 +217,16 @@ func(h *Handler) AddStudentToGroup(c *gin.Context){
 	c.JSON(http.StatusOK, resp)
 }
 
+// @Summary Delete student from group
+// @Description This endpoint allows deleting a student from a specific group.
+// @Tags groups
+// @Accept  json
+// @Produce  json
+// @Param data body group.DeleteStudentReq true "Student deletion request"
+// @Success 200 {object} group.DeleteResp "Successful student deletion"
+// @Failure 400 {object} model.Error "Bad request: invalid input data"
+// @Failure 500 {object} model.Error "Internal server error"
+// @Router /groups/delete-student [delete]
 func(h *Handler) DeleteStudentFromGroup(c *gin.Context){
 	req := pb.DeleteStudentReq{}
 	err := c.ShouldBindJSON(&req)
@@ -175,6 +248,16 @@ func(h *Handler) DeleteStudentFromGroup(c *gin.Context){
 	c.JSON(http.StatusOK, resp)
 }
 
+// @Summary Add teacher to group
+// @Description This endpoint allows adding a teacher to a specific group.
+// @Tags groups
+// @Accept  json
+// @Produce  json
+// @Param data body group.AddTeacherReq true "Teacher addition request"
+// @Success 200 {object} group.AddTeacherResp "Successful teacher addition"
+// @Failure 400 {object} model.Error "Bad request: invalid input data"
+// @Failure 500 {object} model.Error "Internal server error"
+// @Router /groups/add-teacher [post]
 func(h *Handler) AddTeacherToGroup(c *gin.Context){
 	req := pb.AddTeacherReq{}
 	err := c.ShouldBindJSON(&req)
@@ -196,6 +279,16 @@ func(h *Handler) AddTeacherToGroup(c *gin.Context){
 	c.JSON(http.StatusOK, resp)
 }
 
+// @Summary Delete teacher from group
+// @Description This endpoint allows deleting a teacher from a specific group.
+// @Tags groups
+// @Accept  json
+// @Produce  json
+// @Param data body group.DeleteTeacherReq true "Teacher deletion request"
+// @Success 200 {object} group.DeleteResp "Successful teacher deletion"
+// @Failure 400 {object} model.Error "Bad request: invalid input data"
+// @Failure 500 {object} model.Error "Internal server error"
+// @Router /groups/delete-teacher [delete]
 func(h *Handler) DeleteTeacherFromGroup(c *gin.Context){
 	req := pb.DeleteTeacherReq{}
 	err := c.ShouldBindJSON(&req)
@@ -217,6 +310,16 @@ func(h *Handler) DeleteTeacherFromGroup(c *gin.Context){
 	c.JSON(http.StatusOK, resp)
 }
 
+// @Summary Get student groups
+// @Description This endpoint retrieves the list of groups a specific student belongs to.
+// @Tags groups
+// @Accept  json
+// @Produce  json
+// @Param data body group.StudentId true "Student ID"
+// @Success 200 {object} group.StudentGroups "Successful retrieval of student groups"
+// @Failure 400 {object} model.Error "Bad request: invalid input data"
+// @Failure 500 {object} model.Error "Internal server error"
+// @Router /groups/student-groups [get]
 func(h *Handler) GetStudentGroups(c *gin.Context){
 	req := pb.StudentId{}
 	err := c.ShouldBindJSON(&req)
@@ -238,6 +341,16 @@ func(h *Handler) GetStudentGroups(c *gin.Context){
 	c.JSON(http.StatusOK, resp)
 }
 
+// @Summary Get teacher groups
+// @Description This endpoint retrieves the list of groups a specific teacher belongs to.
+// @Tags groups
+// @Accept  json
+// @Produce  json
+// @Param data body group.TeacherId true "Teacher ID"
+// @Success 200 {object} group.TeacherGroups "Successful retrieval of teacher groups"
+// @Failure 400 {object} model.Error "Bad request: invalid input data"
+// @Failure 500 {object} model.Error "Internal server error"
+// @Router /groups/teacher-groups [get]
 func(h *Handler) GetTeacherGroups(c *gin.Context){
 	req := pb.TeacherId{}
 	err := c.ShouldBindJSON(&req)
@@ -259,6 +372,16 @@ func(h *Handler) GetTeacherGroups(c *gin.Context){
 	c.JSON(http.StatusOK, resp)
 }
 
+// @Summary Get students of a group
+// @Description This endpoint retrieves the list of students in a specific group.
+// @Tags groups
+// @Accept  json
+// @Produce  json
+// @Param data body group.GroupId true "Group ID"
+// @Success 200 {object} group.GroupStudents "Successful retrieval of group students"
+// @Failure 400 {object} model.Error "Bad request: invalid input data"
+// @Failure 500 {object} model.Error "Internal server error"
+// @Router /groups/students [get]
 func(h *Handler) GetGroupStudents(c *gin.Context){
 	req := pb.GroupId{}
 	err := c.ShouldBindJSON(&req)
